--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zncc"]
 	path = zncc
 	url = https://github.com/theunafraid/zncc.git
+[submodule "sndfile-tools"]
+	path = sndfile-tools
+	url = https://github.com/theunafraid/sndfile-tools.git
